test: ajuste testes de vizualização de fase inicial e fase concluida.